libs/toolkit-macros-tests/tests/ui/fail/ctor_string_literal.rs
use toolkit_macros::module;

#[module(name="x", capabilities=[stateful], ctor="X::new()")]
pub struct X;

fn main() {}
